Fix code block overflow due to missing box-sizing on pre element (#48)
* Initial plan

* Fix code block overflow by adding box-sizing: border-box to pre rule


---------

--- a/_includes/main.css
+++ b/_includes/main.css
@@ -401,6 +401,7 @@ pre {
   line-height: 2rem;
   overflow: auto;
   background: #fff;
+  box-sizing: border-box;
 }
 .wrapper-normal,
 .wrapper-large {
